--- a/Style.css
+++ b/Style.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
 }
 .tableau{
-    position: relative;
+    position: fixed;
     left: 49%;
     background-color: rgba(0, 132, 255, 0.24);
-    top:230px;
+    top:300px;
 }
 .survole:hover{ 
     background-color:rgb(165, 42, 42);
@@ -66,9 +66,9 @@ html{
 
 #tableDepense{
     background-color: rgba(0, 132, 255, 0.24);
-    position: relative;
+    position: fixed;
     left:161px;
-    top: 130px;
+    top: 300px;
 }
 #formulairedepense{
     display: none;
